syntax = "proto2";

package asdc.proto;

message OnzenLive {
  enum Polarity {
    POLARITY_POSITIVE = 0;
    POLARITY_NEGATIVE = 1;
  }

  enum Color {
    COLOR_LOW = 0;
    COLOR_CAUTION_LOW = 1;
    COLOR_OK = 2;
    COLOR_CAUTION_HIGH = 3;
    COLOR_HIGH = 4;
  }

  optional string guid = 1;
  optional int32 orp = 2;
  optional int32 ph_100 = 3;
  optional int32 current = 4;
  optional int32 voltage = 5;
  optional int32 current_setpoint = 6;
  optional int32 voltage_setpoint = 7;
  optional bool pump1 = 8;
  optional bool pump2 = 9;
  optional int32 orp_state_machine = 10;
  optional int32 electrode_state_machine = 11;
  optional int32 electrode_id = 12;
  optional Polarity electrode_polarity = 13;
  optional int32 electrode_1_resistance_1 = 14;
  optional int32 electrode_1_resistance_2 = 15;
  optional int32 electrode_2_resistance_1 = 16;
  optional int32 electrode_2_resistance_2 = 17;
  optional bool command_mode = 18;
  optional int32 electrode_mAH = 19;
  optional Color ph_color = 20;
  optional Color orp_color = 21;
  optional int32 electrode_wear = 22;
}
